# skatearm

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
dashboard/: README.md  app.py  preview_cycle.html  preview_overview.html
docs/: ARCHITECTURE.md  ROADMAP.md  commander.html  index.html  redesign.html  robots.txt  sitemap.xml
logs/: cycle_001.json  cycle_002_camera_qc.json
sim/: README.md  benchmark.py  benchmark_results.json  demo_cell_assemble.py  demo_cell_cycle.py  demo_cell_pick.py  demo_cell_reach.py  demo_dual_carry.py  demo_selfcollision.py  demo_wave.py  make.py  make_cell_scene.py  make_collision_model.py  make_control_model.py  primitives.py  qc.py  render_skate.py  requirements.txt  sequencer.py  telemetry_demo.py  test_benchmark.py  test_gravity_ff.py
specs/: demo_task_spec.md
tools/: README.md
tools/skate_commander/: README.md  preview.html  requirements.txt
tools/skate_commander/scripts/: make_preview.py
tools/skate_commander/skate_commander/: __init__.py  __main__.py  bridge.py  camera.py  detect.py  grasp.py  ibvs.py  kinematics.py  nl.py  planner.py  program.py  server.py  urdf.py  vision.py
tools/skate_commander/static/: app.js  index.html  style.css
tools/skate_commander/test/: test_bridge.py  test_detect.py  test_force.py  test_grasp.py  test_guard.py  test_ibvs.py  test_kinematics.py  test_nl.py  test_obstacles.py  test_planner.py  test_program.py  test_sandbox.py  test_urdf.py  test_ws_e2e.py
tools/skate_moveit_config/: CMakeLists.txt  README.md  make_srdf.py  package.xml
tools/skate_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  skate.srdf
tools/skate_moveit_config/examples/: plan_bimanual.py
tools/skate_moveit_config/launch/: demo.launch.py
tools/skate_moveit_config/test/: test_srdf.py
tools/skate_ros2/: README.md  package.xml  setup.cfg  setup.py
tools/skate_ros2/examples/: demo_wire_render.py  wave_no_ros.py
tools/skate_ros2/launch/: skate_bridge.launch.py
tools/skate_ros2/resource/: skate_ros2
tools/skate_ros2/skate_ros2/: __init__.py  driver_node.py  moveit_bridge_node.py  names.py  protocol.py  shared_classes_def.py  sim_endpoint.py  traj_interp.py
tools/skate_ros2/test/: test_driver_logic.py  test_e2e_sim.py  test_moveit_bridge.py  test_names.py  test_protocol_loopback.py  test_wire_safe.py
